Update .gitignore and add sample_cells.png for improved file management
- Modified .gitignore to exclude all PNG files except sample_cells.png, ensuring the sample image is tracked.
- Added sample_cells.png to the repository for use in testing and demonstration purposes.

--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,12 @@ models/
 
 # Generated files
 *.png
+!sample_cells.png
 *.jpg
 *.jpeg
 *.tif
 *.tiff
 analysis.png
-sample_cells.png
-temp_*.png
 
 # OS
 .DS_Store
