--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,69 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+ENV/
+env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Models
 *.pth
 *.pt
 *.ckpt
 *.h5
 *.pkl
-__pycache__/
-*.pyc
+data/models/*.pth
+data/models/*.pt
+
+# Environment
 .env
+config/.env
+
+# Temporary files
 temp_*.png
+temp_*.jpg
+*.tmp
 analysis.png
 analysis_enhanced.png
 report_*.png
+
+# Logs
+*.log
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# Docker
+docker-compose.override.yml
+
+# OS
+Thumbs.db
+.DS_Store
