Update .gitignore to improve file exclusion rules
- Added .venv/ to ignore virtual environment files.
- Removed unnecessary .ipynb_checkpoints/ entry.
- Re-added Thumbs.db to ensure OS-generated files are ignored.

These changes enhance the management of ignored files in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ wheels/
 venv/
 ENV/
 env/
+.venv/
 
 # IDE
 .vscode/
@@ -31,7 +32,6 @@ env/
 *.swp
 *.swo
 *~
-.DS_Store
 
 # Models
 *.pth
@@ -59,11 +59,10 @@ report_*.png
 
 # Jupyter
 .ipynb_checkpoints/
-*.ipynb_checkpoints
 
 # Docker
 docker-compose.override.yml
 
 # OS
-Thumbs.db
 .DS_Store
+Thumbs.db
